crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_dead_code.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { deps } from "deps";
const q__u6BtPnK76q4 = /* @__PURE__ */ qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
export const Foo = componentQrl(q__u6BtPnK76q4);
============================= test.tsx__u6BtPnK76q4.tsx (ENTRY POINT) ==
import { deps } from "deps";
export const _u6BtPnK76q4 = ({foo}) => {
	useMount$(() => {
		if (false) {
			deps();
		}
	});
	return (
		<div />
	);
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    95,
    199
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
== DIAGNOSTICS ==
[]
