crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_default_export.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= src/routes/_repl/[id]/[[...slug]].js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { sibling } from "./sibling";
const q__W4MVsX0BY3o = /* @__PURE__ */ qrl(() => import("./[[...slug]].tsx__W4MVsX0BY3o.tsx"), "_W4MVsX0BY3o");
export default componentQrl(q__W4MVsX0BY3o);
============================= src/routes/_repl/[id]/[[...slug]].tsx__W4MVsX0BY3o.js (ENTRY POINT) ==
import { sibling } from "./sibling";
export const _W4MVsX0BY3o = () => {
	return (
		<div onClick$={() => console.log(mongodb, sibling)}>
		</div>
	);
};
/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "_W4MVsX0BY3o",
  "entry": null,
  "displayName": "[[...slug]].tsx_",
  "hash": "W4MVsX0BY3o",
  "canonicalFilename": "[[...slug]].tsx__W4MVsX0BY3o",
  "path": "src/routes/_repl/[id]",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    99,
    198
  ]
}
*/
== DIAGNOSTICS ==
[]
