crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_default_export_index.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= src/components/mongo/index.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
export default componentQrl(() => {
	return _jsxSorted("div", { "q-e:click": inlinedQrl(() => console.log(mongodb), "mongo_component_div_q_e_click_jncbxvZVtWY") }, null, null, 1, null);
}, "mongo_component_ouWLj4jA2oI");

== DIAGNOSTICS ==
[]
