crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_derived_signals_children.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { useStore, mutable } from '@qwik.dev/core';
import { dep } from './file';
//
const q_TextContent_component_puSwpKXO7Kg = /*#__PURE__*/ _noopQrl("TextContent_component_puSwpKXO7Kg");
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ _noopQrl("App_component_ckEPmXZlub0");
//
q_TextContent_component_puSwpKXO7Kg.s((props) => {
    return <>
			<div>data-nu: {props["data-nu"]}</div>
			<div>class: {props.class}</div>
		</>;
});
q_App_component_ckEPmXZlub0.s(() => {
    const signal = useSignal(0);
    const store = useStore({});
    return <>
			<div>text</div>
			<div>{`text`}</div>
			<div>{1}</div>
			<div>{true}</div>
			<div>{`text${12}`}</div>
			<div>{typeof `text${12}` === "string" ? 12 : 43}</div>
			<div>{signal}</div>
			<div>{signal.value}</div>
			<div>{12 + signal.value}</div>
			<div>{store.address.city.name}</div>
			<div>{store.address.city.name ? "true" : "false"}</div>
			<div>{dep}</div>
			<div>{dep.thing}</div>
			<div>{dep.thing + "stuff"}</div>
			<div>{globalThing}</div>
			<div>{globalThing.thing}</div>
			<div>{globalThing.thing + "stuff"}</div>
			<div>{signal.value()}</div>
			<div>{signal.value + unknown()}</div>
			<div>{mutable(signal)}</div>
			<div>{signal.value + dep}</div>
		</>;
});
export const TextContent = componentQrl(q_TextContent_component_puSwpKXO7Kg);
export const App = componentQrl(q_App_component_ckEPmXZlub0);

== DIAGNOSTICS ==
[]
