crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_derived_signals_complext_children.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 853
expression: output
---
============================= test.js ==
import { _noopQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
import { component$, useStore, mutable } from "@qwik.dev/core";
import { dep } from "./file";
const q__u6BtPnK76q4 = /* @__PURE__ */ _noopQrl("_u6BtPnK76q4");
q__u6BtPnK76q4.s(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return <>
			<ul id="issue-2800-result">
				{Object.entries(store).map(([key, value]) => <li>
					{key} - {value}
				</li>)}
			</ul>
		</>;
});
export const App = componentQrl(q__u6BtPnK76q4);

== DIAGNOSTICS ==
[]
