crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_dev_mode.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 858
expression: output
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrlDEV } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrlDEV(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT) ==
export const App_component_ckEPmXZlub0 = () => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    76,
    200
  ]
}
*/
== DIAGNOSTICS ==
[]
