crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_drop_side_effects.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrlDEV } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
import { server$ } from "@qwik.dev/router";
import { clientSupabase } from "supabase";
import { Client } from "openai";
import { secret } from "./secret";
import { sideEffect } from "./secret";
const q_api_server_JonPp043gH0 = /*#__PURE__*/ qrlDEV(() => import("./test.tsx_api_server_JonPp043gH0"), "api_server_JonPp043gH0");
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrlDEV(() => import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
(function() {
	console.log("run");
})();
(() => {
	console.log("run");
})();
sideEffect();
export const api = serverQrl(q_api_server_JonPp043gH0);
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);

============================= test.tsx_api_server_JonPp043gH0.js (ENTRY POINT) ==
const dfd = new Client(secret);
const supabase = clientSupabase();
export const api_server_JonPp043gH0 = () => {
	supabase.from("ffg").do(dfd);
};

/*
{
  "origin": "test.tsx",
  "name": "api_server_JonPp043gH0",
  "entry": null,
  "displayName": "test.tsx_api_server",
  "hash": "JonPp043gH0",
  "canonicalFilename": "test.tsx_api_server_JonPp043gH0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "server$",
  "captures": false,
  "loc": [
    424,
    473
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT) ==
import { api } from "./test";
export const test_component_LUXeXe0DQrg = () => {
	return (
		<button onClick$={() => await api()}></button>
	)
	};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    491,
    575
  ]
}
*/
== DIAGNOSTICS ==
[
  {
    "scope": "optimizer",
    "category": "sourceError",
    "code": null,
    "file": "test.tsx",
    "message": "`await` is only allowed within async functions and at the top levels of modules"
  }
]
